OpenLDAP 2.4 Change Log

OpenLDAP 2.4.25 Engineering
	Fixed tools for incompatible args (ITS#6849)
	Fixed slapd add objectclasses in order (ITS#6837)
	Added slapd ordering for uidNumber and gidNumber (ITS#6852)
	Fixed slapd sortval handling (ITS#6845)
	Fixed slapd-ldap chain cn=config support (ITS#6837)
	Fixed slapd-meta deadlock (ITS#6846)
	Fixed slapo-sssvlv with multiple requests (ITS#6850)
	Build Environment
		Fixed libldap/lberl/util if/else usage (ITS#6832)
		Fixed Windows odbc32 detection (ITS#6125)
		Fixed test020 exit codes (ITS#6404)
	Documentation
		admin24 guide ldapi usage (ITS#6839)
		admin24 guide conversion notes (ITS#6834)
		admin24 guide note manpages are definitive (ITS#6855)

OpenLDAP 2.4.24 Release (2011/02/10)
	Added LDIF line wrapping setting (ITS#6645)
	Added MozNSS support (ITS#6714,ITS#6742,ITS#6790,ITS#6791)
	Added MozNSS support (ITS#6802,ITS#6811,ITS#6816,ITS#5696)
	Added libldap cert x500UniqueIdentifier handling (ITS#6741)
	Added libldap_r,libldap formal concurrency API (ITS#6625,ITS#5421)
	Added slapadd attribute value checking (ITS#6592)
	Added slapcat continue mode for problematic DBs (ITS#6482)
	Added slapd syncrepl suffixmassage support (ITS#6781)
	Added slapd multiple listener threads (ITS#6780)
	Added slapd extensible match for ordering rules (ITS#6532)
	Added slapd-meta paged results control forwarding (ITS#6664)
	Added slapd-meta subtree-include support (ITS#6801)
	Added slapd-null back-config support (ITS#6624)
	Added slapd-sql autocommit support (ITS#6612)
	Added slapd-sql support for long long keys (ITS#6617)
	Added slapo-sssvlv multiple sorts per connection (ITS#6686)
	Added contrib/autogroup LDAP URI with attribute filter (ITS#6536)
	Added contrib/dupent module (ITS#6630)
	Added contrib/lastbind (ITS#6238)
	Added contrib/kinit for kerberos tickets
	Added contrib/noopsrch for entry counting (ITS#6598)
	Fixed client tools control logging (ITS#6775)
	Fixed client tools one time leak (ITS#6778)