@@ -6,6 +6,7 @@ OpenLDAP 2.4.25 Engineering
 	Added slapd ordering for uidNumber and gidNumber (ITS#6852)
 	Fixed slapd sortval handling (ITS#6845)
 	Fixed slapd-ldap chain cn=config support (ITS#6837)
+	Fixed slapd-ldap chain with slapd.conf (ITS#6857)
 	Fixed slapd-meta deadlock (ITS#6846)
 	Fixed slapo-sssvlv with multiple requests (ITS#6850)
 	Build Environment
